Обновлено. Поле username из конфига теперь не является обязательным

--- a/etc/examples/config.json
+++ b/etc/examples/config.json
@@ -1,5 +1,5 @@
 {
-    "username": "ipetrash",
+    "username": null,
     "max_results": 500,
     "jira_host": "https://helpdesk.compassluxe.com",
     "name_cert": "cert.pem"
