--- a/etc/examples/config.json
+++ b/etc/examples/config.json
@@ -2,5 +2,6 @@
     "username": null,
     "max_results": 500,
     "jira_host": "https://helpdesk.compassluxe.com",
-    "name_cert": "cert.pem"
+    "name_cert": "cert.pem",
+    "gui": null
 }
